--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,17 @@ addons:
 
 jdk:
   - openjdk-21
+
+# Для Coveralls
 script:
-  - mvn clean install sonar:sonar -Dsonar.projectKey=VishLi777_YIVPRPO
+  - mvn clean install
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+# Для SonarCube
+#script:
+#  - mvn clean install sonar:sonar -Dsonar.projectKey=VishLi777_YIVPRPO
 
 notifications:
   email:
