--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,15 @@
         <plugins>
 
             <plugin>
+                <groupId>com.github.hazendaz.maven</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.5.0-M2</version>
+                <configuration>
+                    <repoToken>jPLhzM2PbZ8wR23IdHgKIlqq23ZeE9B8h</repoToken>
+                </configuration>
+            </plugin>
+
+            <plugin>
                 <groupId>org.sonarsource.scanner.maven</groupId>
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.11.0.3922</version>
